# x-jepa

./: LICENSE  README.md  pyproject.toml
tests/: test_regularizers.py  test_x_jepa.py
x_jepa/: min_gru.py  regularizers.py  utils.py  x_jepa.py
