[project]
name = "x-jepa"
version = "0.0.35"
description = "Explorations into JEPA"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'latent space',
    'jepa',
    'world model'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einops>=0.8.1",
    "einx>=0.3.0",
    "ema-pytorch",
    "PoPE-pytorch",
    "torch>=2.4",
    "torch-einops-utils>=0.1.7",
    "x-mlps-pytorch"
]

[project.urls]
Homepage = "https://pypi.org/project/x-jepa/"
Repository = "https://codeberg.org/lucidrains/x-jepa"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "x_jepa",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["x_jepa"]
